--- a/TODO.txt
+++ b/TODO.txt
@@ -1,8 +1,8 @@
-rozlisit shinnines a specular
-mely by byt v jedne texture, shinines jako alpha 0 v unity je to smoothness
-jiny deafult na specular nez 0
 presunout textury do MaterialBlock?
 ostre hrany u specularu
+udelat environment mapu a odrazy ze specularu
+aiTextureType_HEIGHT
+aiTextureType_LIGHTMAP - ambient occlusion
 ---
 library_visual_scenes obsahuje transformace - v assimpu m_rootNode
 ten jaguar pokud ma vic geometrii se musi naloadovat pres loadscene
@@ -34,6 +34,7 @@ https://community.khronos.org/t/sending-an-array-of-structs-to-shader-via-an-uni
 https://docs.unity3d.com/Manual/SL-SubShaderTags.html
 
 v render queue se budou radit objekty prioritne podle vrstvy materialu, potom podle programu
+pruhlednej material musi mit specialni flag
 
 submesh bude drzet vao, aby ho kdyztak mohl modifikovat pri updatu vertices? glMapBuffer
 shader bude drzet lokace?
