--- a/TODO.txt
+++ b/TODO.txt
@@ -1,8 +1,11 @@
 stahnout example modely z https://github.com/KhronosGroup/glTF-Sample-Models/tree/master/2.0
-dotahnout environmental a fresnel - http://c0de517e.blogspot.com/2019/05/seeing-whole-physically-based-picture.html?m=1
+dotahnout environmental a fresnel 
+http://c0de517e.blogspot.com/2019/05/seeing-whole-physically-based-picture.html?m=1
+https://learnopengl.com/PBR/Theory
 jak to mixovat?
 porovnat s unity
 https://developer.download.nvidia.com/CgTutorial/cg_tutorial_chapter07.html
+#include <assimp/pbrmaterial.h>
 potom je globalni ambient light - nebo muze byt brana ze skyboxu
 ambient light from skybox - Use the colors of the skybox to determine the ambient light coming from different angles.
 !!!inspirovat se https://docs.unity3d.com/Manual/StandardShaderMaterialParameters.html
