load whole scene

--- a/TODO.txt
+++ b/TODO.txt
@@ -20,7 +20,10 @@ pro klasicky load jednoho meshe uvazuju, ze je tam jeden mesh a nema zadnou
 transform, zbytek necham na assimpu
 pro loadsceny, prochazim strom sceny a vytvarim pro kazdy node separatni mesh
 ten load sceny by mel rovnou vytvaret objekty anastavovat jim komponenty a nemel by asi nic vracet
+cachovat i sceny? Musel bych mit separe mapy a v nich ukladat vsechny meshe ze sceny
 mel bych nekdy i u normalniho loadu volat unload scene
+jak naloadovat anpr kamery, kdyz se odkazuji do tech models?
+maincamera?
 modely muzou sdilet textury mezi materialy... :/ --treepack??
 predelat inputy mysi na vlastni enumy
 
