playing with specular setup

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,11 +1,12 @@
-otestovat ty moje nonmeatalic modely v unity a taky koule
+metallic jako deafult?
+vyresit to nacitani ro rougness a tak ze samostantych textur?
+TBN - vybrat T takovy, aby odpovidal puvodnimu smeru - musim noramlizovat abych nemel videt trojuhelniky
 lightAmbient odstranit?
 stahnout example modely z https://github.com/KhronosGroup/glTF-Sample-Models/tree/master/2.0
 dotahnout environmental a fresnel 
 https://learnopengl.com/PBR/Theory
 jak to mixovat?
 udelat hdr environment mapu
-porovnat s unity
 https://developer.download.nvidia.com/CgTutorial/cg_tutorial_chapter07.html
 #include <assimp/pbrmaterial.h>
 potom je globalni ambient light - nebo muze byt brana ze skyboxu
@@ -15,8 +16,6 @@ porad nevim co s tou envMapou... vygooglit
 paralax - https://www.gamedev.net/forums/topic/687418-parallax-displacement-mapping-in-2017/
 aiTextureType_LIGHTMAP - ambient occlusion
 attenuation jenom podle distance? a mit treba range jenom jeden parameter
-TBN - vybrat T takovy, aby odpovidal puvodnimu smeru - musim noramlizovat abych nemel videt trojuhelniky
-nastavit spravne material na ty kostky
 reflection probe
 ---
 library_visual_scenes obsahuje transformace - v assimpu m_rootNode
