--- a/TODO.txt
+++ b/TODO.txt
@@ -24,7 +24,7 @@ pro loadsceny, prochazim strom sceny a vytvarim pro kazdy node separatni mesh
 ten load sceny by mel rovnou vytvaret objekty anastavovat jim komponenty a nemel by asi nic vracet
 cachovat i sceny? Musel bych mit separe mapy a v nich ukladat vsechny meshe ze sceny
 mel bych nekdy i u normalniho loadu volat unload scene
-jak naloadovat anpr kamery, kdyz se odkazuji do tech models?
+jak naloadovat anpr kamery, kdyz se odkazuji do tech models? predam vectory pres referenci do jedne metody, ktere naplnim kdyz nejsou null
 maincamera?
 modely muzou sdilet textury mezi materialy... :/ --treepack??
 predelat inputy mysi na vlastni enumy
