--- a/TODO.txt
+++ b/TODO.txt
@@ -1,21 +1,30 @@
 predavat resolution do PrecalculateEnvMap pres uniform? - podpora nastavovat jednoduche uniformy pres jmeno, MAX_REFLECTION_LOD 
-udelat druhy shader pro kalsickyho phonga
 mit nekde globalne nadefinovany targety textur
+diffuse predelat na albedo?
 umoznit nastavit texturu jako kanal jine - napr rougness u te cihlove zdi
+ty pbr textury mit samostatne, kdyz jsou v jedne tak to pri loadu rozdelit - nebo naopak
+udelat si scenu v bleneru z tech tilu a tak
 metallic jako default?
 lightAmbient odstranit?
+pomoci tonemappingu a exposure muzu udelat tmave sceny a tak
+Basic.frag neni uplne basic...
+nacitat albedo textury pomoci SRGB a nemuset to delat v shaderu? ten neHDR skybox taky je v srgb a je potreba ho prevest
 stahnout example modely z https://github.com/KhronosGroup/glTF-Sample-Models/tree/master/2.0
 #include <assimp/pbrmaterial.h>
 paralax - https://www.gamedev.net/forums/topic/687418-parallax-displacement-mapping-in-2017/
 aiTextureType_LIGHTMAP - ambient occlusion
-attenuation jenom podle distance? a mit treba range jenom jeden parameter
+attenuation jenom podle distance? a mit treba range jenom jeden parameter - je treba vzit v uvahu gamma korekci
 reflection probe
 https://chetanjags.wordpress.com/2015/08/26/image-based-lighting/
 https://blog.selfshadow.com/publications/s2013-shading-course/karis/s2013_pbs_epic_notes_v2.pdf
+https://freepbr.com/about-free-pbr/
 ---
 mel bych nekdy i u normalniho loadu volat unload scene
 modely muzou sdilet textury mezi materialy... :/ --treepack??
 predelat inputy mysi na vlastni enumy
+
+deffered rendere podle metal gearu
+Screen Space Reflections
 
 vytvaret kopie objektu
 https://stackoverflow.com/questions/5027456/copying-derived-entities-using-only-base-class-pointers-without-exhaustive-tes
@@ -39,8 +48,6 @@ submesh bude drzet vao, aby ho kdyztak mohl modifikovat pri updatu vertices? glM
 shader bude drzet lokace?
 
 moznost nacist alpha jeste ze samostatne textury?
-
-tone mapping - https://64.github.io/tonemapping/
 
 All Awake calls
 All Start Calls
