load metallic factors

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,5 +1,4 @@
-nacteni individualnich default metalic hodnot z materialu kdyz neni metalic textura
-fixnout sekani
+fixnout sekani - asi je potreba prevest skybox z hdr do srgb
 dodelat nacitani svetel z gltf do assimpu
 ---
 deffered renderer podle metal gearu
